<resources>
    <string name="app_name">CountDownAssignment</string>
    <string name="_10_00">10:00</string>
    <string name="start">start</string>
    <string name="reset">Reset</string>
    <string name="_00_00">00:00</string>
    <string name="set">Set</string>
    <string name="enter_minutes">Enter minutes</string>
    <string name="done">Done</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
</resources>