<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/countDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/_00_00"
        android:textSize="48sp" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/countDown"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_minutes"
        android:layout_gravity="center"
        android:inputType="number"
        android:maxLength="4" />

    <Button
        android:id="@+id/button_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start"
        android:onClick="startTimer"/>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/reset"
        android:onClick="reset"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="settingsClicked"
        android:text="@string/settings"
        android:textSize="30sp" />
</androidx.appcompat.widget.LinearLayoutCompat>
